--- a/frontend/m1-react-quickstart/package.json
+++ b/frontend/m1-react-quickstart/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-json-view": "^1.21.3",
     "react-scripts": "5.0.1",
     "react-split-pane": "^2.0.3",
