--- a/node/package.json
+++ b/node/package.json
@@ -20,6 +20,7 @@
     "morgan": "~1.9.1",
     "ngrok": "^5.0.0-beta.2",
     "npm": "^10.8.1",
+    "react-helmet-async": "^2.0.5",
     "react-json-view": "^1.21.3",
     "utf8": "^3.0.0",
     "winston": "^3.13.0"
