--- a/frontend/m1-react-quickstart/package.json
+++ b/frontend/m1-react-quickstart/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
+    "http-proxy-middleware": "^3.0.2",
     "mui-color-input": "^2.0.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
@@ -33,7 +34,7 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -57,7 +58,6 @@
     ]
   },
   "devDependencies": {
-    "http-proxy-middleware": "^3.0.0",
     "react-router-dom": "^6.24.0"
   },
   "proxy": "http://localhost:3000"
