--- a/node/package.json
+++ b/node/package.json
@@ -10,11 +10,13 @@
     "base-64": "^1.0.0",
     "Base64": "^1.3.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "express-sse": "^0.5.3",
     "http-errors": "~1.6.3",
+    "http-proxy-middleware": "^3.0.2",
     "install": "^0.13.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
