changes in .env_sample

--- a/.env_sample
+++ b/.env_sample
@@ -1,2 +1,3 @@
-MEASUREONE_CLIENT_ID=<YOUR_CLIENT_ID>
-MEASUREONE_SECRET=<YOUR_SECRET>
+M1_API_URL = https://api-stg.measureone.com
+M1_CLIENT_ID = <your_client_id>
+M1_CLIENT_SECRET = <your_client_secret>
